--- a/cmd/CMakeLists.txt
+++ b/cmd/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(main main.c)
 
-target_link_libraries(main LINK_PUBLIC no_threads with_threads)
+target_link_libraries(main LINK_PUBLIC no_threads with_threads menu)
