need to fix with_procs realisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(tp_c_iz2 C CXX)
 
 set(CMAKE_C_STANDARD 99)
 
+set (CMAKE_C_FLAGS "-pthread -Wall -Werror -Wpedantic")
+
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(cmd)
