--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_subdirectory(with_threads)
+add_subdirectory(with_procs)
 
-add_subdirectory(no_threads)
+add_subdirectory(no_procs)
 
 add_subdirectory(menu)
