need to fix segm problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,5 @@ set (CMAKE_C_FLAGS "-pthread -Wall -Werror -Wpedantic")
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(cmd)
+
+configure_file(src/word_gen/words.txt cmd/words.txt COPYONLY)
