--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(Threads REQUIRED)
 
 add_executable(tests tests.cpp main.cpp)
 
-target_link_libraries(tests ${GTEST_LIBRARIES} Threads::Threads no_threads with_threads menu)
+target_link_libraries(tests ${GTEST_LIBRARIES} Threads::Threads no_procs with_procs menu)
