need to make tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(tests)
 add_subdirectory(cmd)
 
 configure_file(src/word_gen/words.txt cmd/words.txt COPYONLY)
+configure_file(src/word_gen/words.txt tests/words.txt COPYONLY)
