tests, valgrind ready

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,6 @@ add_subdirectory(tests)
 add_subdirectory(cmd)
 
 configure_file(src/word_gen/words.txt cmd/words.txt COPYONLY)
-configure_file(src/word_gen/words.txt tests/words.txt COPYONLY)
+configure_file(src/word_gen/words.txt tests/menu/words.txt COPYONLY)
+configure_file(src/word_gen/words.txt tests/no_procs/words.txt COPYONLY)
+configure_file(src/word_gen/words.txt tests/with_procs/words.txt COPYONLY)
