--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(tp_c_iz2 C CXX)
 
 set(CMAKE_C_STANDARD 99)
 
-set (CMAKE_C_FLAGS "-pthread -Wall -Werror -Wpedantic")
+set (CMAKE_C_FLAGS "-pthread -Wall -Werror -Wpedantic  -lpthread")
 
 add_subdirectory(src)
 add_subdirectory(tests)
