--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 3.17)
 project(tp_c_iz2 C CXX)
 
 set(CMAKE_C_STANDARD 99)
-
-set (CMAKE_C_FLAGS "-pthread -Wall -Werror -Wpedantic  -lpthread")
+set(CMAKE_CXX_FLAGS "-Wall -Werror -Wpedantic  -lpthread -fprofile-arcs -ftest-coverage")
 
 add_subdirectory(src)
 add_subdirectory(tests)
