--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.17)
 project(tp_c_iz2 C CXX)
 
 set(CMAKE_C_STANDARD 99)
-set(CMAKE_CXX_FLAGS "-Wall -Werror -Wpedantic  -lpthread -fprofile-arcs -ftest-coverage")
+set(CMAKE_CXX_FLAGS "-Wall -Wno-unknown-pragmas -Wno-sign-compare -Woverloaded-virtual -Wwrite-strings -Wno-unused -Werror -Wpedantic -fprofile-arcs -ftest-coverage")
+set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g")
+
+set(CMAKE_C_FLAGS "--coverage")
 
 add_subdirectory(src)
 add_subdirectory(tests)
