--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ configure_file(src/word_gen/words.txt cmd/words.txt COPYONLY)
 configure_file(src/word_gen/words.txt tests/menu/words.txt COPYONLY)
 configure_file(src/word_gen/words.txt tests/no_procs/words.txt COPYONLY)
 configure_file(src/word_gen/words.txt tests/with_procs/words.txt COPYONLY)
+configure_file(src/word_gen/words.txt tests/stress_tests/words.txt COPYONLY)
