--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,3 +6,4 @@ include(ExternalProject)
 add_subdirectory(menu)
 add_subdirectory(no_procs)
 add_subdirectory(with_procs)
+add_subdirectory(stress_tests)
